--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "agentic-studio-do-sutaze",
+  "name": "agentic-studio-do-sutaze-18.1.26/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
