feat: Remove unused context providers
This commit removes the ThemeProvider and LayoutProvider from the application's root, as these contexts are no longer utilized.

The corresponding types and logic related to these contexts have also been removed from `types.ts` and `geminiService.ts` where applicable.

Additionally, the dependency array for `useCallback` in `App.tsx` has been updated to reflect the removal of context-dependent hooks. The `tsconfig.json` has been updated to explicitly define `node` types.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,8 +10,9 @@
       "DOM.Iterable"
     ],
     "skipLibCheck": true,
-    "strict": true,
-    "forceConsistentCasingInFileNames": true,
+    "types": [
+      "node"
+    ],
     "moduleResolution": "bundler",
     "isolatedModules": true,
     "moduleDetection": "force",
